--- a/hotel/src/app/auth/create-profile/signup.scss
+++ b/hotel/src/app/auth/create-profile/signup.scss
@@ -187,7 +187,7 @@
         display: flex;
         gap: 0;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         justify-content: center;
     }
 
