--- a/hotel/src/app/main.scss
+++ b/hotel/src/app/main.scss
@@ -461,13 +461,15 @@ a{
   font-size: 16px; 
   color: #846316;
   font-weight: 400;
+  text-transform: uppercase;
   font-family:"Radley", serif; 
 }
 .section-hotel-new-swiper .card.hotel-news-swipe p{
   font-size: 12px; 
   color: #3E3232BF;
   font-weight: 400;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  text-transform: uppercase;
+  font-family:"Radley", serif; 
   line-height: 18px;
   margin-bottom: 16px;
 }
